--- a/cv_10.tex
+++ b/cv_10.tex
@@ -46,6 +46,8 @@ Austin, Texas
 \href{https://charliemeyer.net}{https://charliemeyer.net}
 \href{https://www.github.com/cemeyer2}{Github}
 \href{www.linkedin.com/in/cemeyer2}{LinkedIn}
+~
+\emph{Please do not contact me if you work for a recruiting agency.}
 \section{tongue}
 native english,
 professional spanish proficiency
@@ -98,7 +100,13 @@ Specialization: Software Engineering, Information Assurance}
 {HomeAway}
 {Austin, Texas}
 {\emph{Software Engineer} \\
-As the lead engineer for QA on HomeAway's core API, I architected a test suite comprised of over 15,000 individual test cases. This test suite also was enhanced with data-driven tests, continuous integration, and automated coverage analysis. I also led weekly releases of new core API code to HomeAway's production environment, acted as the point of synchronization across the company regarding the API team's needs, and led the development for the HomeAway Ruby REST API client.}
+At HomeAway, I have been the quality assurance lead and architect for the entire backend of our infrastructure. I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms.
+\newline
+\newline
+My primary focus is on guiding our development teams and architects on how to engineer QA into their projects from the start, by communicating with them on a technical CS level that they can relate with. I daily deal with technologies such as RabbitMQ, Elastic Search, Hadoop, Solr, MSSQL, Spring, among many others.
+\newline
+\newline
+In my 10\% time, I have been working on projects that relate to a combination of static and dynamic analysis of our backend codebase tied in with big data (hadoop) to deliver meaningful QA meAt HomeAway, I have been the quality assurance lead and architect for the entire backend of our infrastructure. I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms.}
 \end{entrylist}
 \begin{entrylist}
 \entry
@@ -293,7 +301,7 @@ SDMC, IBM FSP and BPC, Brocade and IBM SAN switches, IBM System Storage, EMC Sto
 \end{itemize}
 \textbf{ACADEMIC:} object-oriented design patterns, enterprise application architecture, next-generation systems architecture, static program analysis, optimization by specialization, information integrity and assurance, distributed systems, next generation computer science education \\
 \textbf{PERSONAL:} f1 racing, skiing, world travel, culinary creativity and experimentation, car audio, electronic dance music
-
+\pagebreak
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS SECTION
 %----------------------------------------------------------------------------------------
