--- a/cv_10.tex
+++ b/cv_10.tex
@@ -106,7 +106,7 @@ At HomeAway, I have been the quality assurance lead and architect for the entire
 My primary focus is on guiding our development teams and architects on how to engineer QA into their projects from the start, by communicating with them on a technical CS level that they can relate with. I daily deal with technologies such as RabbitMQ, Elastic Search, Hadoop, Solr, MSSQL, Spring, among many others.
 \newline
 \newline
-In my 10\% time, I have been working on projects that relate to a combination of static and dynamic analysis of our backend codebase tied in with big data (hadoop) to deliver meaningful QA meAt HomeAway, I have been the quality assurance lead and architect for the entire backend of our infrastructure. I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms.}
+In my 10\% time, I have been working on projects that relate to a combination of static and dynamic analysis of our backend codebase, logging, and test results piped into big data (hadoop via kafka) to deliver meaningful metrics not only to the QA organization but also all of HomeAway at large. }
 \end{entrylist}
 \begin{entrylist}
 \entry
