--- a/cv_10.tex
+++ b/cv_10.tex
@@ -100,10 +100,7 @@ Specialization: Software Engineering, Information Assurance}
 {HomeAway}
 {Austin, Texas}
 {\emph{Software Engineer} \\
-At HomeAway, I have been the quality assurance lead and architect for the entire backend of our infrastructure. I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms.
-\newline
-\newline
-My primary focus is on guiding our development teams and architects on how to engineer QA into their projects from the start, by communicating with them on a technical CS level that they can relate with. I daily deal with technologies such as RabbitMQ, Elastic Search, Hadoop, Solr, MSSQL, Spring, among many others.
+At HomeAway, I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms. My primary focus is on guiding our development teams and architects on how to engineer QA into their projects from the start, by communicating with them on a technical CS level that they can relate with. I also am the lead developer on our several of our Ruby gems used to communicate with and test our backend services. I daily deal with technologies such as RabbitMQ, Elastic Search, Hadoop, Solr, MSSQL, Spring, among many others.
 \newline
 \newline
 In my 10\% time, I have been working on projects that relate to a combination of static and dynamic analysis of our backend codebase, logging, and test results piped into big data (hadoop via kafka) to deliver meaningful metrics not only to the QA organization but also all of HomeAway at large. }
