--- a/friggeri-cv.cls
+++ b/friggeri-cv.cls
@@ -354,5 +354,5 @@
 % Other tweaks %
 %%%%%%%%%%%%%%%%
 
-\RequirePackage[left=6.1cm,top=2cm,right=1.5cm,bottom=2.5cm,nohead,nofoot]{geometry}
+\RequirePackage[left=6.1cm,top=2cm,right=1.5cm,bottom=2.5cm,nohead]{geometry}
 %\RequirePackage{hyperref}
