--- a/cv_10.tex
+++ b/cv_10.tex
@@ -104,7 +104,7 @@ Specialization: Software Engineering, Information Assurance}
 {2014-Present}
 {HomeAway}
 {Austin, Texas}
-{\emph{Software Engineer} \\
+{\emph{Senior Software Engineer} \\
 At HomeAway, I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms. My primary focus is on guiding our development teams and architects on how to engineer QA into their projects from the start, by communicating with them on a technical CS level that they can relate with. I also am the lead developer on our several of our Ruby gems used to communicate with and test our backend services. I daily deal with technologies such as RabbitMQ, Elastic Search, Hadoop, Solr, MSSQL, Spring, git, IntelliJ IDEA, TeamCity, Jira, Confluence, QuickBuild, RRDTool, Splunk, among many others. \\
 Detailed achievements:
 \begin{itemize}
