--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,6 +2,13 @@
 %% Date of the export : 02/05/2012
 %% Criteria : Author : 'friggeri'
 
+@Patent{cem-patent,
+ AUTHOR = {E. Cruz-aguilar and P. Ganesh and M. Kandasamy and C. Meyer and S. Tovcimak},
+ TITLE = {Enhanced Mechanisms for Granting Access to Shared Resources},
+ YEAR = {03-26-2015},
+ TYPE = {US Patent 20150089059},
+ URL = {http://www.freepatentsonline.com/y2015/0089059.html},
+}
 
 @thesis{cem-comoto-thesis,
  AUTHOR = {Meyer, C},
