--- a/cv_10.tex
+++ b/cv_10.tex
@@ -78,16 +78,14 @@ professional spanish proficiency
 {2010-2012}
 {Masters of Science {\normalfont computer science}}
 {University of Illinois, Urbana-Champaign}
-{GPA: 3.8/4.0 \\
-Specialization: Software Engineering, Software Architecture, Design Patterns, Next Generation Computer Science Education \\ 
+{Specialization: Software Engineering, Software Architecture, Design Patterns, Next Generation Computer Science Education \\ 
 Thesis: CoMoTo: The Collaboration Modeling Toolkit }
 %------------------------------------------------
 \entry
 {2005-2010}
 {Bachelor of Science {\normalfont computer science}}
 {University of Illinois, Urbana-Champaign}
-{GPA: 3.7/4.0 \\
-Specialization: Software Engineering, Information Assurance}
+{Specialization: Software Engineering, Information Assurance}
 %------------------------------------------------
 \end{entrylist}
 
@@ -105,18 +103,19 @@ Specialization: Software Engineering, Information Assurance}
 {HomeAway}
 {Austin, Texas}
 {\emph{Senior Software Engineer} \\
-At HomeAway, I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms. My primary focus is on guiding our development teams and architects on how to engineer QA into their projects from the start, by communicating with them on a technical CS level that they can relate with. I also am the lead developer on our several of our Ruby gems used to communicate with and test our backend services. I daily deal with technologies such as RabbitMQ, Elastic Search, Hadoop, Solr, MSSQL, Spring, git, IntelliJ IDEA, TeamCity, Jira, Confluence, QuickBuild, RRDTool, Splunk, among many others. \\
+At HomeAway, I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms. My primary focus is on guiding our development teams and architects on how to engineer QA into their projects from the start, by communicating with them on a technical CS level that they can relate with. I also am the lead developer and architect on our several of our Ruby gems used to communicate with and test our backend services. I daily deal with technologies such as RabbitMQ, Elasticsearch, Kibana, Hadoop, Hive, Storm, Kafka, Solr, MSSQL, Spring, git, IntelliJ IDEA, TeamCity, Jira, Confluence, QuickBuild, RRDTool, Splunk, among many others. \\
 Detailed achievements:
 \begin{itemize}
-\item Led the quality effort to roll out HomeAway's new owner inbox application based on ElasticSearch
-\item Developed HomeAway-specific Ruby libraries to communicate with our internal infrastructure including ElasticSearch, Microsoft SQL Server, Opsview, and RabbitMQ
-\item Delivered PoC work to integrate the Jolokia JMX library into the HomeAway stack
+\item Led and architected the backend quality effort to roll out HomeAway's new owner inbox application based on Elasticsearch
+\item Developed HomeAway-specific Ruby libraries to communicate with our internal infrastructure including Elasticsearch, Microsoft SQL Server, Opsview, RabbitMQ, and our core platform APIs
+\item Delivered PoC work to integrate the Jolokia JMX library into the HomeAway backend stack
 \item Developed and delivered training sessions to the QA and development organizations covering HomeAway's platform architecture and each of its component technologies
-\item Led the quality effort for our new platform search service based on ElasticSearch
+\item Led and architected the quality effort for our new platform search service based on Elasticsearch
 \item Organized workshops for our engineering group to bring in distinguished speakers in the Computer Science field
-\item Led the quality effort to roll out a new caching infrastructure for our high traffic API
-\item Developed several load test suites and used them to perform load and scale analysis across many of our core platform applications
+\item Led and architected the quality effort to roll out a new caching infrastructure for our high traffic API based on Elasticsearch
+\item Continually delivered atomic load test suites to perform load and scale analysis across many of our core platform applications
 \item Organized, verified, and led over 75 live production releases of our core platform applications
+\item Provided continual platform support to engineers and quality assurance tem members across the organization
 \end{itemize}}
 \end{entrylist}
 \begin{entrylist}
@@ -132,11 +131,11 @@ and enhance the AIX cluster communications daemon. \\
 Detailed achievements:
 \begin{itemize}
 \item Led the AIX effort to certify Oracle Real Application Clusters database on PowerHA
-\item Leader of IBM quality management for AIX Austin
 \item Enhanced AIX clustering to scale to 32 nodes and 1024 disks per node, including parallelization of core clustering libraries
 \item Enabled unicast AIX cluster heartbeating
 \item Enabled dynamic network configuration change support across clustered systems
-\item Co-author of patents in process
+\item Co-author of a clutering algorithm patent 
+\item Leader of IBM quality management for AIX Austin
 \end{itemize}}
 \end{entrylist}
 %------------------------------------------------
@@ -180,7 +179,7 @@ maintenance on IBM Power Systems, and develop tools to aid in performance analys
 \begin{entrylist}
 \entry
 {2007-2008}
-{SOLIDWARE TECHNOLOGIES}
+{Solidware Technologies}
 {Champaign, Illinois}
 {\emph{Software Engineer} \\
 Worked as a member of an agile team developing a J2EE web based application which performed static code analysis using Spring, Hibernate, JavaCC, H2, Emma, and Docbook. Used automated building and testing with Hudson. \\
@@ -201,7 +200,7 @@ Key responsibilities included:
 \begin{entrylist}
 \entry
 {2012}
-{UNIVERSITY OF ILLINOIS}
+{Univeristy of Illinois, Department of Computer Science}
 {Urbana, Illinois}
 {\emph{Instructor} \\
 Instructor for graduate course on object-oriented programming, object-oriented design, and design patterns. Worked
@@ -212,7 +211,7 @@ teams on semester long object-oriented Smalltalk projects. Mentored by Gang of F
 \begin{entrylist}
 \entry
 {2010-2012}
-{UNIVERSITY OF ILLINOIS}
+{Univeristy of Illinois, Department of Computer Science}
 {Urbana, Illinois}
 {\emph{Graduate Teaching Assistant} \\
 Lead teaching assistant for software engineering and design course. Led weekly discussion sections focusing on proper program design, composition, and testing. Developed and delivered new lecture content to audiences of over 140 students and created new compounding programming assignments for students to complete. Gave weekly lectures to large audiences. Course objectives focused on writing clean, modular, and maintainable code in a variety of languages including C, C++, C\#, Java, Python, and Ruby. Other topics covered included Agile methods, proper testing and TDD, design patterns, build management, development environments, and revision control. The main themes that were taught focused around the practical side of software engineering and preparing students for full time careers in the field.}
@@ -221,7 +220,7 @@ Lead teaching assistant for software engineering and design course. Led weekly d
 \begin{entrylist}
 \entry
 {2007-2010}
-{UNIVERSITY OF ILLINOIS}
+{Univeristy of Illinois, Department of Computer Science}
 {Urbana, Illinois}
 {\emph{Undergraduate Teaching Assistant} \\
 Teaching assistant for software engineering course mentioned above.}
@@ -230,7 +229,7 @@ Teaching assistant for software engineering course mentioned above.}
 \begin{entrylist}
 \entry
 {2007-2012}
-{UNIVERSITY OF ILLINOIS}
+{Univeristy of Illinois, Department of Computer Science}
 {Urbana, Illinois}
 {\emph{CoMoTo Research Project Leader} \\
 Designed and built a system for detecting and visualizing instances of collaboration and plagiarism in student code
@@ -243,7 +242,7 @@ Computer Science. Worked with course staff to apply the system to analyze curren
 \begin{entrylist}
 \entry
 {2009-2010}
-{UNIVERSITY OF ILLINOIS}
+{Univeristy of Illinois, Department of Computer Science}
 {Urbana, Illinois}
 {\emph{Research Assistant} \\
 Researcher on the Medical Device Plug and Play (MDPnP) project. Our group's goal was to design a flexible software architecture for complex systems of networked medical devices in a clinical setting. We initially mocked a system using the JavaScript programming language and reworked the architecture using a variety of technologies, including Java, JSON, and CouchDB. In addition to the direct medical architectures we proposed, we also developed and released a JavaScript framework for ensuring object-level security in the browser.}
@@ -296,28 +295,30 @@ Researcher on the Medical Device Plug and Play (MDPnP) project. Our group's goal
 
 \textbf{PROFESSIONAL:} 
 \begin{itemize}
-\item \textbf{languages:} Java, JavaScript, C, C++, C\#, Ruby, Python, Perl, Bash and Korn scripting, HTML, CSS, XML, Docbook,
-XSLT, UML, AS400 CL, Rxx, Matlab, Smalltalk (Pharo), Maude, SQL, SQL PL, \LaTeX
+\item \textbf{languages:} Java, JavaScript, C, C++, C\#, Objective-C, Ruby, Python, PHP, Perl, Bash and Korn scripting, HTML, CSS, XML, Docbook,
+XSLT, UML, AS400 CL, Rxx, Matlab, Smalltalk (Pharo), Maude, SQL, SQL PL, Elixir, Erlang, BeanShell, Scala, Groovy, Lisp, Fortran, Haskell, \LaTeX
 \item \textbf{frameworks/libraries:} Spring, Hibernate, Ant, Ruby on Rails, JUnit, log4j, YUI, Prototype, Scriptaculous, jQuery, Jasmine,
 Swing, SWT, GWT, Pylons, SQLAlchemy, Elixir, Pyramid, Seaside, Joomla, Android application development, Eclipse plugin development, vim plugin development,
-Wordpress, libpurple
-\item \textbf{development environments:} Eclipse, Netbeans, JetBrains IntelliJ Idea, Microsoft Visual Studio, Aptana Studio, JetBrains PyCharm, Pharo, Squeak,
-Smalltalk, vim
+Wordpress
+\item \textbf{data stores:} MySQL, Oracle (including RAC), IBM DB2, Postgres, SQLite, H2, Derby, CouchDB, Elasticsearch
+\item \textbf{big data:} Hadoop, Kafka, Hive, Storm, HBase, Spark, ZooKeeper, Avro, Hunk
+\item \textbf{development environments:} Eclipse, Netbeans, JetBrains IntelliJ Idea, Microsoft Visual Studio, Aptana Studio, JetBrains PyCharm, Pharo, Squeak, vim
 \item \textbf{operating systems:} Linux (Ubuntu, RHEL and derivatives, SuSE SLES), Windows, Mac OS X, IBM AIX, IBM i5/OS,
 Cisco IOS
-\item \textbf{databases:} MySQL, Oracle (including RAC), IBM DB2, Postgres, SQLite, H2, Derby, CouchDB
 \item \textbf{other:} Subversion, Mercurial, Git, IBM CMVC, Jenkins, Selenium, Rational tools including Rational Functional Tester, Rational Performance
 Tester, Rational Quality Manager, Rational ClearCase and Rational ClearQuest, IBM PowerHA, IBM VIOS, IBM HMC, IBM
 SDMC, IBM FSP and BPC, Brocade and IBM SAN switches, IBM System Storage, EMC Storage, Hitachi Storage
 \end{itemize}
 \textbf{ACADEMIC:} object-oriented design patterns, enterprise application architecture, next-generation systems architecture, static program analysis, optimization by specialization, information integrity and assurance, distributed systems, next generation computer science education \\
-\textbf{PERSONAL:} f1 racing, skiing, world travel, culinary creativity and experimentation, car audio, electronic dance music
+\textbf{PERSONAL:} f1 racing, downhill skiing, world travel, culinary creativity and experimentation
 \pagebreak
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS SECTION
 %----------------------------------------------------------------------------------------
 
 \section{publications}
+
+\printbibsection{patent}{patents}
 
 \printbibsection{thesis}{thesis}
 
