--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,7 +7,7 @@
  TITLE = {Enhanced Mechanisms for Granting Access to Shared Resources},
  YEAR = {03-26-2015},
  TYPE = {US Patent 20150089059},
- URL = {http://www.freepatentsonline.com/y2015/0089059.html},
+ URL = {http://appft1.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&d=PG01&p=1&u=/netahtml/PTO/srchnum.html&r=1&f=G&l=50&s1=20150089059.PGNR.},
 }
 
 @thesis{cem-comoto-thesis,
