--- a/cv_10.tex
+++ b/cv_10.tex
@@ -52,7 +52,7 @@ Austin, Texas
 \href{https://www.github.com/cemeyer2}{Github}
 \href{www.linkedin.com/in/cemeyer2}{LinkedIn}
 ~
-\emph{Please do not contact me if you work for a recruiting agency.}
+%\emph{Please do not contact me if you work for a recruiting agency.}
 \section{tongue}
 native english,
 professional spanish proficiency
@@ -92,7 +92,7 @@ Thesis: CoMoTo: The Collaboration Modeling Toolkit }
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
-\pagebreak
+%\pagebreak
 \section{industry experience}
 
 
@@ -103,19 +103,18 @@ Thesis: CoMoTo: The Collaboration Modeling Toolkit }
 {HomeAway}
 {Austin, Texas}
 {\emph{Senior Software Engineer} \\
-At HomeAway, I am leading the effort to unify our front-end ruby-based testing infrastructure to also cover our API, enterprise messaging, big data, and other platforms. My primary focus is on guiding our development teams and architects on how to engineer QA into their projects from the start, by communicating with them on a technical CS level that they can relate with. I also am the lead developer and architect on our several of our Ruby gems used to communicate with and test our backend services. I daily deal with technologies such as RabbitMQ, Elasticsearch, Kibana, Hadoop, Hive, Storm, Kafka, Solr, MSSQL, Spring, git, IntelliJ IDEA, TeamCity, Jira, Confluence, QuickBuild, RRDTool, Splunk, among many others. \\
+At HomeAway, I am a senior software engineer on our core platform team which covers our internal high-traffic REST API, enterprise messaging busses and NOSQL stores. My primary focus is on guiding our development teams and architects on how to engineer quality into their projects from the onset and throughout the software development lifecycle. I daily deal with technologies such as RabbitMQ, Elasticsearch, Kibana, Hadoop, Storm, Kafka, Samza, MSSQL, and Splunk among many others. \\
 Detailed achievements:
 \begin{itemize}
-\item Led and architected the backend quality effort to roll out HomeAway's new owner inbox application based on Elasticsearch
-\item Developed HomeAway-specific Ruby libraries to communicate with our internal infrastructure including Elasticsearch, Microsoft SQL Server, Opsview, RabbitMQ, and our core platform APIs
-\item Delivered PoC work to integrate the Jolokia JMX library into the HomeAway backend stack
-\item Developed and delivered training sessions to the QA and development organizations covering HomeAway's platform architecture and each of its component technologies
-\item Led and architected the quality effort for our new platform search service based on Elasticsearch
-\item Organized workshops for our engineering group to bring in distinguished speakers in the Computer Science field
-\item Led and architected the quality effort to roll out a new caching infrastructure for our high traffic API based on Elasticsearch
-\item Continually delivered atomic load test suites to perform load and scale analysis across many of our core platform applications
-\item Organized, verified, and led over 75 live production releases of our core platform applications
-\item Provided continual platform support to engineers and quality assurance tem members across the organization
+\item Led and architected the backend quality effort to roll out HomeAway's new owner inbox, caching and entity search applications based on Elasticsearch and Cassandra
+\item Developed HomeAway-specific Ruby libraries to communicate with our internal infrastructure including Elasticsearch, Microsoft SQL Server, Opsview, RabbitMQ, Kafka, Cassandra and our core platform APIs
+\item Mentored the 3 Day Startup Program sponsored by HomeAway both in Austin, TX and London, UK
+\item Architected, developed, and open-sourced the \href{https://github.com/homeaway/homeaway_api_ruby}{HomeAway Ruby SDK for the HomeAway Developer API}
+\item Open-sourced a \href{https://github.com/homeaway/homeaway-storm}{Ruby library for communicating with Apache Storm clusters} on behalf of HomeAway
+\item Developed and delivered quarterly training sessions to the engineering organization covering HomeAway's platform architecture and each of its component technologies
+\item Organized workshops for our engineering orginazation to bring in distinguished speakers in the Computer Science field
+%\item Led and architected the quality effort to roll out a new caching infrastructure for our high traffic API based on Elasticsearch and Cassandra
+%\item Provided continual platform support to engineers and quality assurance team members across the organization
 \end{itemize}}
 \end{entrylist}
 \begin{entrylist}
@@ -139,15 +138,15 @@ Detailed achievements:
 \end{itemize}}
 \end{entrylist}
 %------------------------------------------------
-\begin{entrylist}
-\entry
-{2011-2012}
-{IBM}
-{Champaign, Illinois}
-{\emph{Campus Representative} \\
-Campus representative for the University of Illinois at Urbana-Champaign. Coordinated with IBM HR and recruiters to
-organize events to promote IBM on campus to students across campus. Actively pursued and recommended new candidates for engineering positions.}
-\end{entrylist}
+%\begin{entrylist}
+%\entry
+%{2011-2012}
+%{IBM}
+%{Champaign, Illinois}
+%{\emph{Campus Representative} \\
+%Campus representative for the University of Illinois at Urbana-Champaign. Coordinated with IBM HR and recruiters to
+%organize events to promote IBM on campus to students across campus. Actively pursued and recommended new candidates for engineering positions.}
+%\end{entrylist}
 %------------------------------------------------
 \begin{entrylist}
 \entry
@@ -181,16 +180,16 @@ maintenance on IBM Power Systems, and develop tools to aid in performance analys
 {2007-2008}
 {Solidware Technologies}
 {Champaign, Illinois}
-{\emph{Software Engineer} \\
-Worked as a member of an agile team developing a J2EE web based application which performed static code analysis using Spring, Hibernate, JavaCC, H2, Emma, and Docbook. Used automated building and testing with Hudson. \\
-Key responsibilities included:
-\begin{itemize}
-\item Developing new application functionality
-\item End to end QA, including unit testing, integration testing, and regression testing
-\item Writing product documentation and transforming it across a variety of mediums
-\item Participating in product launch strategy
-\item Translating business needs into technical requirements
-\end{itemize}}
+{\emph{Software Engineer Intern} \\
+Worked as a member of an agile team developing a J2EE web based application which performed static code analysis using Spring, Hibernate, JavaCC, H2, Emma, and Docbook. Used automated building and testing with Hudson.} \\
+%Key responsibilities included:
+%\begin{itemize}
+%\item Developing new application functionality
+%\item End to end QA, including unit testing, integration testing, and regression testing
+%\item Writing product documentation and transforming it across a variety of mediums
+%\item Participating in product launch strategy
+%\item Translating business needs into technical requirements
+%\end{itemize}}
 \end{entrylist}
 %------------------------------------------------
 \pagebreak
@@ -295,19 +294,13 @@ Researcher on the Medical Device Plug and Play (MDPnP) project. Our group's goal
 
 \textbf{PROFESSIONAL:} 
 \begin{itemize}
-\item \textbf{languages:} Java, JavaScript, C, C++, C\#, Objective-C, Ruby, Python, PHP, Perl, Bash and Korn scripting, HTML, CSS, XML, Docbook,
-XSLT, UML, AS400 CL, Rxx, Matlab, Smalltalk (Pharo), Maude, SQL, SQL PL, Elixir, Erlang, BeanShell, Scala, Groovy, Lisp, Fortran, Haskell, \LaTeX
-\item \textbf{frameworks/libraries:} Spring, Hibernate, Ant, Ruby on Rails, JUnit, log4j, YUI, Prototype, Scriptaculous, jQuery, Jasmine,
-Swing, SWT, GWT, Pylons, SQLAlchemy, Elixir, Pyramid, Seaside, Joomla, Android application development, Eclipse plugin development, vim plugin development,
-Wordpress
-\item \textbf{data stores:} MySQL, Oracle (including RAC), IBM DB2, Postgres, SQLite, H2, Derby, CouchDB, Elasticsearch
-\item \textbf{big data:} Hadoop, Kafka, Hive, Storm, HBase, Spark, ZooKeeper, Avro, Hunk
-\item \textbf{development environments:} Eclipse, Netbeans, JetBrains IntelliJ Idea, Microsoft Visual Studio, Aptana Studio, JetBrains PyCharm, Pharo, Squeak, vim
-\item \textbf{operating systems:} Linux (Ubuntu, RHEL and derivatives, SuSE SLES), Windows, Mac OS X, IBM AIX, IBM i5/OS,
-Cisco IOS
-\item \textbf{other:} Subversion, Mercurial, Git, IBM CMVC, Jenkins, Selenium, Rational tools including Rational Functional Tester, Rational Performance
-Tester, Rational Quality Manager, Rational ClearCase and Rational ClearQuest, IBM PowerHA, IBM VIOS, IBM HMC, IBM
-SDMC, IBM FSP and BPC, Brocade and IBM SAN switches, IBM System Storage, EMC Storage, Hitachi Storage
+\item \textbf{languages:} Java, JavaScript, C, C++, C\#, Objective-C, Ruby, Python, SQL, SQL PL, Erlang, BeanShell, Scala, Groovy, PHP, Perl, Bash and Korn scripting, HTML, CSS, XML, XSLT, UML, AS400 CL, Rxx, Matlab, Smalltalk (Pharo), Maude, \LaTeX
+\item \textbf{frameworks/libraries:} Spring, Hibernate, Ant, Ruby on Rails, JUnit, log4j, YUI, Prototype, Scriptaculous, jQuery, Jasmine, RSpec, Swing, SWT, GWT, Pylons, SQLAlchemy, Elixir, Pyramid, Seaside, Joomla, Android application development, Eclipse plugin developments
+\item \textbf{data stores:} MySQL, Elasticsearch, Cassandra, Riak, SQLServer, Oracle (including RAC), IBM DB2, Postgres, SQLite, H2, Derby, CouchDB
+\item \textbf{big data:} Hadoop, Kafka, Hive, Storm, HBase, Spark, Samza, YARN, ZooKeeper, Avro, Hunk
+\item \textbf{development environments:} Eclipse, Netbeans, JetBrains IntelliJ Idea, Aptana Studio, Pharo, Squeak, vim
+\item \textbf{operating systems:} Linux (Ubuntu, RHEL and derivatives, SuSE SLES), Mac OS X, IBM AIX, IBM i5/OS
+\item \textbf{other:} Subversion, Mercurial, Git, Jenkins, TeamCity, docker
 \end{itemize}
 \textbf{ACADEMIC:} object-oriented design patterns, enterprise application architecture, next-generation systems architecture, static program analysis, optimization by specialization, information integrity and assurance, distributed systems, next generation computer science education \\
 \textbf{PERSONAL:} f1 racing, downhill skiing, world travel, culinary creativity and experimentation
