--- a/cv_10.tex
+++ b/cv_10.tex
@@ -133,7 +133,7 @@ Detailed achievements:
 \item Enhanced AIX clustering to scale to 32 nodes and 1024 disks per node, including parallelization of core clustering libraries
 \item Enabled unicast AIX cluster heartbeating
 \item Enabled dynamic network configuration change support across clustered systems
-\item Co-author of a clutering algorithm patent 
+\item Co-author of a clustering algorithm patent 
 \item Leader of IBM quality management for AIX Austin
 \end{itemize}}
 \end{entrylist}
