--- a/cv_10.tex
+++ b/cv_10.tex
@@ -58,43 +58,15 @@ native english,
 professional spanish proficiency
 \end{aside}
 
-\section{professional summary}
-
-\textbf{High energy}, creative and focused individual with excellent track record working in matrixed and dispersed team environments, recognized for leadership and team building skills, adept in oral and written communications.
-
 \section{objective}
 
 \textbf{To obtain} a full time position in the software engineering field at a dynamic high tech company.
-
-%----------------------------------------------------------------------------------------
-%	EDUCATION SECTION
-%----------------------------------------------------------------------------------------
-
-\section{education}
-
-\begin{entrylist}
-%------------------------------------------------
-\entry
-{2010-2012}
-{Masters of Science {\normalfont computer science}}
-{University of Illinois, Urbana-Champaign}
-{Specialization: Software Engineering, Software Architecture, Design Patterns, Next Generation Computer Science Education \\ 
-Thesis: CoMoTo: The Collaboration Modeling Toolkit }
-%------------------------------------------------
-\entry
-{2005-2010}
-{Bachelor of Science {\normalfont computer science}}
-{University of Illinois, Urbana-Champaign}
-{Specialization: Software Engineering, Information Assurance}
-%------------------------------------------------
-\end{entrylist}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 %\pagebreak
 \section{industry experience}
-
 
 %------------------------------------------------
 \begin{entrylist}
@@ -103,16 +75,14 @@ Thesis: CoMoTo: The Collaboration Modeling Toolkit }
 {HomeAway}
 {Austin, Texas}
 {\emph{Senior Software Engineer} \\
-At HomeAway, I am a senior software engineer on our core platform team which covers our internal high-traffic REST API, enterprise messaging busses and NOSQL stores. My primary focus is on guiding our development teams and architects on how to engineer quality into their projects from the onset and throughout the software development lifecycle. I daily deal with technologies such as RabbitMQ, Elasticsearch, Kibana, Hadoop, Storm, Kafka, Samza, MSSQL, and Splunk among many others. \\
+At HomeAway, I am a the lead software engineer on our internal tools and infrastructure team. I was previously on the core platform team which covers HomeAway's high-traffic REST API and enterprise messaging busses. I daily deal with technologies such as RabbitMQ, Elasticsearch, Hadoop, Kafka, and Docker among many others. \\
 Detailed achievements:
 \begin{itemize}
-\item Led and architected the backend quality effort to roll out HomeAway's new owner inbox, caching and entity search applications based on Elasticsearch and Cassandra
-\item Developed HomeAway-specific Ruby libraries to communicate with our internal infrastructure including Elasticsearch, Microsoft SQL Server, Opsview, RabbitMQ, Kafka, Cassandra and our core platform APIs
+\item Architected, developed, and rolled out a new internal application based on Ruby on Rails used by all engineers to accurately capture capitalizable time
+\item Architected and led a team to develop a distributed SOA-based JSON registry and dashboard framework
 \item Mentored the 3 Day Startup Program sponsored by HomeAway both in Austin, TX and London, UK
 \item Architected, developed, and open-sourced the \href{https://github.com/homeaway/homeaway_api_ruby}{HomeAway Ruby SDK for the HomeAway Developer API}
 \item Open-sourced a \href{https://github.com/homeaway/homeaway-storm}{Ruby library for communicating with Apache Storm clusters} on behalf of HomeAway
-\item Developed and delivered quarterly training sessions to the engineering organization covering HomeAway's platform architecture and each of its component technologies
-\item Organized workshops for our engineering orginazation to bring in distinguished speakers in the Computer Science field
 %\item Led and architected the quality effort to roll out a new caching infrastructure for our high traffic API based on Elasticsearch and Cassandra
 %\item Provided continual platform support to engineers and quality assurance team members across the organization
 \end{itemize}}
@@ -134,7 +104,6 @@ Detailed achievements:
 \item Enabled unicast AIX cluster heartbeating
 \item Enabled dynamic network configuration change support across clustered systems
 \item Co-author of a clustering algorithm patent 
-\item Leader of IBM quality management for AIX Austin
 \end{itemize}}
 \end{entrylist}
 %------------------------------------------------
@@ -165,13 +134,11 @@ firmware using Rational tools, including Rational Functional Tester and Rational
 {Rochester, Minnesota}
 {\emph{Power Systems Performance Co-op} \\
 Worked as a member of a team to benchmark systems, analyze performance data, develop workloads, perform
-maintenance on IBM Power Systems, and develop tools to aid in performance analysis. Worked with a variety of teams to turn technical challenges into useful tools to expedite performance work. Key skills include IBM i5/OS, Java, JDBC, IBM DB2, SQL, stored procedures, AS400 control language, IBM Hardware Management Consoles, and IBM Power systems. 
+maintenance on IBM Power Systems, and develop tools to aid in performance analysis. 
 \begin{itemize}
 \item Created an automation framework to streamline TPC-C benchmarks
 \item Developed the front-end and CL/C++ harness for a new implementation of TPC-E for IBM i
 \item Architected and developed an API to access Collection Services, PEX, JobWatcher, and DiskWatcher data from IBM i in Java
-\item Developed software to generate reports summarizing system performance from benchmark runs
-\item Created automation tools for enhancing and streamlining benchmark workflows
 \end{itemize}}
 \end{entrylist}
 %------------------------------------------------
@@ -181,7 +148,7 @@ maintenance on IBM Power Systems, and develop tools to aid in performance analys
 {Solidware Technologies}
 {Champaign, Illinois}
 {\emph{Software Engineer Intern} \\
-Worked as a member of an agile team developing a J2EE web based application which performed static code analysis using Spring, Hibernate, JavaCC, H2, Emma, and Docbook. Used automated building and testing with Hudson.} \\
+Worked as a member of an agile team developing a J2EE web based application which performed static code analysis.} \\
 %Key responsibilities included:
 %\begin{itemize}
 %\item Developing new application functionality
@@ -191,120 +158,31 @@ Worked as a member of an agile team developing a J2EE web based application whic
 %\item Translating business needs into technical requirements
 %\end{itemize}}
 \end{entrylist}
-%------------------------------------------------
-\pagebreak
-\section{academia experience}
 
-%------------------------------------------------
+%----------------------------------------------------------------------------------------
+%	EDUCATION SECTION
+%----------------------------------------------------------------------------------------
+
+\section{education}
+
 \begin{entrylist}
-\entry
-{2012}
-{Univeristy of Illinois, Department of Computer Science}
-{Urbana, Illinois}
-{\emph{Instructor} \\
-Instructor for graduate course on object-oriented programming, object-oriented design, and design patterns. Worked
-extensively with Smalltalk as a means to relay the concepts of the course and mentored several small group project
-teams on semester long object-oriented Smalltalk projects. Mentored by Gang of Four member Ralph Johnson.}
-\end{entrylist}
 %------------------------------------------------
-\begin{entrylist}
 \entry
 {2010-2012}
-{Univeristy of Illinois, Department of Computer Science}
-{Urbana, Illinois}
-{\emph{Graduate Teaching Assistant} \\
-Lead teaching assistant for software engineering and design course. Led weekly discussion sections focusing on proper program design, composition, and testing. Developed and delivered new lecture content to audiences of over 140 students and created new compounding programming assignments for students to complete. Gave weekly lectures to large audiences. Course objectives focused on writing clean, modular, and maintainable code in a variety of languages including C, C++, C\#, Java, Python, and Ruby. Other topics covered included Agile methods, proper testing and TDD, design patterns, build management, development environments, and revision control. The main themes that were taught focused around the practical side of software engineering and preparing students for full time careers in the field.}
+{Masters of Science {\normalfont computer science}}
+{University of Illinois, Urbana-Champaign}
+{Specialization: Software Engineering, Software Architecture, Design Patterns, Next Generation Computer Science Education \\ 
+Thesis: CoMoTo: The Collaboration Modeling Toolkit }
+%------------------------------------------------
+\entry
+{2005-2010}
+{Bachelor of Science {\normalfont computer science}}
+{University of Illinois, Urbana-Champaign}
+{Specialization: Software Engineering, Information Assurance}
+%------------------------------------------------
 \end{entrylist}
 %------------------------------------------------
-\begin{entrylist}
-\entry
-{2007-2010}
-{Univeristy of Illinois, Department of Computer Science}
-{Urbana, Illinois}
-{\emph{Undergraduate Teaching Assistant} \\
-Teaching assistant for software engineering course mentioned above.}
-\end{entrylist}
-%------------------------------------------------
-\begin{entrylist}
-\entry
-{2007-2012}
-{Univeristy of Illinois, Department of Computer Science}
-{Urbana, Illinois}
-{\emph{CoMoTo Research Project Leader} \\
-Designed and built a system for detecting and visualizing instances of collaboration and plagiarism in student code
-submissions for programming assignments. Used lexicographical analysis and advanced data structuring and storage,
-along with a variety of libraries and frameworks to deploy the solution as a dedicated web application. Worked with
-professors of courses to determine system requirements and built the system into a hosted service for the Department of
-Computer Science. Worked with course staff to apply the system to analyze current code submissions.}
-\end{entrylist}
-%------------------------------------------------
-\begin{entrylist}
-\entry
-{2009-2010}
-{Univeristy of Illinois, Department of Computer Science}
-{Urbana, Illinois}
-{\emph{Research Assistant} \\
-Researcher on the Medical Device Plug and Play (MDPnP) project. Our group's goal was to design a flexible software architecture for complex systems of networked medical devices in a clinical setting. We initially mocked a system using the JavaScript programming language and reworked the architecture using a variety of technologies, including Java, JSON, and CouchDB. In addition to the direct medical architectures we proposed, we also developed and released a JavaScript framework for ensuring object-level security in the browser.}
-\end{entrylist}
 
-%----------------------------------------------------------------------------------------
-%	AWARDS SECTION
-%----------------------------------------------------------------------------------------
-\pagebreak
-\section{awards}
-
-%------------------------------------------------
-\begin{entrylist}
-\entry
-{2011}
-{Outstanding Teaching Assistant Award}
-{College of Engineering, University of Illinois}
-{Awarded to the top teaching assistants in the college as voted by the student body.}
-\end{entrylist}
-%------------------------------------------------
-\begin{entrylist}
-\entry
-{2004}
-{Eagle Scout}
-{Boy Scouts of America}
-{}
-\end{entrylist}
-%------------------------------------------------
-\begin{entrylist}
-\entry
-{2005}
-{Vigil Honor Award}
-{Boy Scouts of America, Order of the Arrow Honor Society}
-{}
-\end{entrylist}
-%------------------------------------------------
-\begin{entrylist}
-\entry
-{2007-2012}
-{American Leadership Academy}
-{Cabo San Lucas, BCS, Mexico}
-{University Leader, Adult Mentor}
-\end{entrylist}
-
-%----------------------------------------------------------------------------------------
-%	INTERESTS SECTION
-%----------------------------------------------------------------------------------------
-
-\section{interests}
-
-\textbf{PROFESSIONAL:} 
-\begin{itemize}
-\item \textbf{languages:} Java, JavaScript, C, C++, C\#, Objective-C, Ruby, Python, SQL, SQL PL, Erlang, BeanShell, Scala, Groovy, PHP, Perl, Bash and Korn scripting, HTML, CSS, XML, XSLT, UML, AS400 CL, Rxx, Matlab, Smalltalk (Pharo), Maude, \LaTeX
-\item \textbf{frameworks/libraries:} Spring, Hibernate, Ant, Ruby on Rails, JUnit, log4j, YUI, Prototype, Scriptaculous, jQuery, Jasmine, RSpec, Swing, SWT, GWT, Pylons, SQLAlchemy, Elixir, Pyramid, Seaside, Joomla, Android application development, Eclipse plugin developments
-\item \textbf{data stores:} MySQL, Elasticsearch, Cassandra, Riak, SQLServer, Oracle (including RAC), IBM DB2, Postgres, SQLite, H2, Derby, CouchDB
-\item \textbf{big data:} Hadoop, Kafka, Hive, Storm, HBase, Spark, Samza, YARN, ZooKeeper, Avro, Hunk
-\item \textbf{development environments:} Eclipse, Netbeans, JetBrains IntelliJ Idea, Aptana Studio, Pharo, Squeak, vim
-\item \textbf{operating systems:} Linux (Ubuntu, RHEL and derivatives, SuSE SLES), Mac OS X, IBM AIX, IBM i5/OS
-\item \textbf{other:} Subversion, Mercurial, Git, Jenkins, TeamCity, docker
-\end{itemize}
-\textbf{ACADEMIC:} object-oriented design patterns, enterprise application architecture, next-generation systems architecture, static program analysis, optimization by specialization, information integrity and assurance, distributed systems, next generation computer science education \\
-\textbf{PERSONAL:} f1 racing, downhill skiing, world travel, culinary creativity and experimentation
-\pagebreak
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS SECTION
 %----------------------------------------------------------------------------------------
